--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -670,8 +670,8 @@ Indian Act</h3>
 <li><a href="#subtab3">Self-employment income</a></li>
 </ul>
 
-<details><summary><span class="fas fa-comments></span> What if you do not know if a worker is an employee or is self-employed </summary>
-<div id="worker-status">
+<details><summary><span class="fas fa-comments"></span> What if you do not know if a worker is an employee or is self-employed </summary>
+<div id="ajax-worker-status">
 <p>If you or an individual  working for you is not sure of the worker's employment status (employee or self-employed), either one of you can request a CPP/EI ruling to determine the status and whether the employment or the earnings are   pensionable, insurable or both.</p>
 <p>Learn more:</p>
 <ul>
@@ -685,46 +685,11 @@ Indian Act</h3>
     <div class="tabpanels">
       <details id="subtab1">
         <summary>Employment income</summary>
- </details>
- <details id="subtab2">
-        <summary>Non-employment income</summary>
- </details>
- <details id="subtab3">
-        <summary>Self-employment income</summary>
-
- </details>
-
- </div>
- </div>
-
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
- <li>             
-<h3 id="step1">	Determine the nature of the payment made to the worker</h3>
-<p>Depending on the nature of the payment you made to the worker, the withholding and reporting deductions are different.</p>
-<hr>
-
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>employment income</strong> or <strong>employment-related income</strong>, continue to <a href="#step2">Step 2 - Determine if the First Nations employment income is exempt from tax</a>.</li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the <strong>payment is made to a recipient</strong> (for example: education allowances, scholarships or training allowances), continue to <a href="#step4">Step ? - ???</a>.</li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>self-employment income paid to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</strong>, continue to <a href="#step3">Step ? - ???</a>.</li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>other self-employment income or business income</strong>, continue to <a href="#step5">Step ? - ???</a>.</li>
-</ul>
-<details><summary><span class="fas fa-comments fa-lg"></span> What if you do not know if a worker is an employee or is self-employed </summary>
-<div id="worker-status">
-<p>If you or an individual  working for you is not sure of the worker's employment status (employee or self-employed), either one of you can request a CPP/EI ruling to determine the status and whether the employment or the earnings are   pensionable, insurable or both.</p>
-<p>Learn more:</p>
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-11.html">How to get a CPP/EI ruling</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Guide RC4110 - Employee or Self-employed?</a> </li> 
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></li>
-</ul>
-</div>
-</details>
- </li>
 
   <li>             
-<h3 id="step2">Determine if the First Nations employment income is exempt from tax</h3>
+<h3 id="step1">Determine if the First Nations employment income is exempt from tax</h3>
 <div id="ajax-reg">
 <p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
@@ -760,13 +725,13 @@ Indian Act</h3>
   <div id="ajax-notreg">
 <p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step3">Step 3 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
 	
  </li>
 
   <li>
-<h3 id="step3">Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
+<h3 id="step2">Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
  <div id="ajax-uncommon">
 <p>You can use the employment income guidance for common employment situations. Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analysed based on various court decisions to determine if the exemption applies. </p>
 
@@ -776,16 +741,16 @@ Indian Act</h3>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your situation is <strong>uncommon</strong>, <strong>do not</strong> continue to next step.</p> 
-  <div id="ajax-notreg">
+  <div id="ajax-notreg2">
 <p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
 <p> You must deduct CPP, EI and income tax the same as regular workers until you receive confirmation from the CRA. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If your situation is common, continue to <a href="#step4">Step 4 - Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If your situation is common, continue to <a href="#step3">Step 3 - Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
  </li>
 
   <li>
-<h3 id="step4">Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</h3>
+<h3 id="step3">Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</summary>
 <h4>Exempt income situation</h4>
@@ -810,7 +775,7 @@ Indian Act</h3>
 </details>
 </li>
 
-<li><h3 id="step3">Determine the residency of the payer</h3>
+<li><h3 id="step4">Determine the residency of the payer</h3>
 <p>Info to be transfered here later, just trying to find the appropriate structure.</p>
 </li>
 <li>	  
@@ -903,7 +868,7 @@ Indian Act</h3>
                   </ul>
 </details>
 </div>
-<h4 id="h_3_1">Residency situation</h4>
+<h4 id="step5">Residency situation</h4>
   
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> <strong>or</strong> you are a resident on a reserve, continue to <a href="#3a">Step 3a</a></li>
@@ -935,7 +900,7 @@ Indian Act</h3>
 <details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve - Guideline 1 (proration rule)</summary>
 <h4>Partly-exempt income</h4>
  <div id="ajax-prorate-income">
-<p>Generally, the income is partly-exempt from income tax if the employee performs 50% or less of their employment duties on a reserve. 
+<p>Generally, the income is partly-exempt from income tax if the employee performs 50% or less of their employment duties on a reserve. </p>
 <p>The exemption is prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
@@ -1057,57 +1022,30 @@ Indian Act</h3>
 <p>If the employer chooses not to apply for coverage, an <strong>Indian </strong>can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
  
 		
-                     </ul>
+                    
 	 </div>
   </details>
 
-<h4>Payment made to a a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
- <details><summary>Income all exempt</summary> 
-   <div id="ajax-t4-how-self-ex">
 
-	<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+<div id="ajax-how-t4-t4a">
+<p class="mrgn-tp-md">Learn more:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(tax-exempt income)</small></li>  
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
-</ul></li>
+<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
+<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
 </ul>
 	 </div>
-  </details>
+</li>
 
- <details><summary>Income partly-exempt</summary> 
-   <div id="ajax-t4-how-self-part">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>  
- </ul></li>
+</ol>
+ </details>
+ <details id="subtab2">
+        <summary>Non-employment income</summary>
+<h2 class="h3">Steps</h2>
+  <ol class="lst-stps stps-strpd">
 
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small class="text-muted">(appropriate code)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed fishers</strong>)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 82 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong>)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 83 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed barbers and hairdressers</strong>)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
-</ul></li>
-</ul>
-	   </div>
-  </details>
-
-<h4>Payment made to a person or partnership that was a shareholder</h4>
+  <li>   Add steps here</li>
+<li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
+<h4>Payment made to a recipient</h4>
 <div id="ajax-t4a-report">
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4a-how-ex">
@@ -1157,7 +1095,6 @@ Indian Act</h3>
  </div>
   </details>
 </div>
-
 <div id="ajax-how-t4-t4a">
 <p class="mrgn-tp-md">Learn more:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -1168,6 +1105,74 @@ Indian Act</h3>
 </li>
 
 </ol>
+ </details>
+ <details id="subtab3">
+        <summary>Self-employment income</summary>
+<h2 class="h3">Steps</h2>
+  <ol class="lst-stps stps-strpd">
+
+  <li>Add steps here </li>
+<li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
+
+<h4>Payment made to a a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
+ <details><summary>Income all exempt</summary> 
+   <div id="ajax-t4-how-self-ex">
+
+	<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(tax-exempt income)</small></li>  
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
+</ul></li>
+</ul>
+	 </div>
+  </details>
+
+ <details><summary>Income partly-exempt</summary> 
+   <div id="ajax-t4-how-self-part">
+<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>  
+ </ul></li>
+
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small class="text-muted">(appropriate code)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed fishers</strong>)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 82 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong>)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 83 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed barbers and hairdressers</strong>)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
+</ul></li>
+</ul>
+	   </div>
+  </details>
+<div id="ajax-how-t4-t4a">
+<p class="mrgn-tp-md">Learn more:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
+<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
+</ul>
+	 </div>
+</li>
+
+</ol>
+ </details>
+
+ </div>
+ </div>
 	
 </div>
 	</details>	 
