--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -665,7 +665,7 @@ Indian Act</h3>
 
 <p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
 <ul>
-<li><a href="#subtab1">Employment income or employment-related income</a> </li>
+<li><a href="#subtab1">Employment income</a> (including employment-related income)</li>
 <li><a href="#subtab2">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
 <li><a href="#subtab3">Self-employment income</a></li>
 </ul>
@@ -1095,13 +1095,7 @@ Indian Act</h3>
  </div>
   </details>
 </div>
-<div id="ajax-how-t4-t4a">
-<p class="mrgn-tp-md">Learn more:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
-<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
-</ul>
-	 </div>
+ <div data-ajax-replace="#ajax-how-t4-t4a"></div>
 </li>
 
 </ol>
@@ -1159,13 +1153,7 @@ Indian Act</h3>
 </ul>
 	   </div>
   </details>
-<div id="ajax-how-t4-t4a">
-<p class="mrgn-tp-md">Learn more:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
-<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
-</ul>
-	 </div>
+ <div data-ajax-replace="#ajax-how-t4-t4a"></div>
 </li>
 
 </ol>
