--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -969,63 +969,61 @@ Indian Act</h3>
 </li>
 
 <li><h3 id="h_6">Withhold and report the payment on a slip</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
-<h4>Payment made to your employee</h4>
+<div id="ajax-t4-how-emp-intro">
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
+</div>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4-how-ex-emp">
-	<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee: </p>
+	
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
  <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(all income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong>)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(only if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> if you filed Form CPT124)</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 on tax-exempt non-eligible retiring allowances you paid</li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 71 on tax-exempt employment income you paid </li>
 </ul></li>
 </ul>
+<div id="ajax-cpp-info">
 <p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
-<p>If the employer chooses not to apply for coverage, an <strong>Indian </strong>can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
- 
+<p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
+  </div>
 	 </div>
   </details>
 
  <details><summary>Income partly-exempt</summary> 
 <div id="ajax-t4-how-part-emp">
-	
-<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income or on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(on <strong>all</strong> income)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income or on all income if you filed Form CPT124)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(on <strong>all</strong> income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 66 if you paid eligible retiring allowances <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 67 if you paid non-eligible retiring allowances <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 if you paid non-eligible retiring allowances <small class="text-muted">(<strong>only</strong> on tax-exempt income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small class="text-muted">(<strong>only</strong> on tax-exempt income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(<strong>only</strong> on taxable income)</small> </li>
 </ul></li>
 </ul>
-<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
-<p>If the employer chooses not to apply for coverage, an <strong>Indian </strong>can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
- 
-		
+ <div data-ajax-replace="#ajax-cpp-info"></div>
+ 	
                     
 	 </div>
   </details>
-
 
 <div id="ajax-how-t4-t4a">
 <p class="mrgn-tp-md">Learn more:</p>
@@ -1108,7 +1106,7 @@ Indian Act</h3>
   <li>Add steps here </li>
 <li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
 
-<h4>Payment made to a a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
+<h4>Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
 
@@ -1117,14 +1115,18 @@ Indian Act</h3>
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(tax-exempt income)</small></li>  
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
+  <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
+ 
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
 </ul></li>
 </ul>
+ <div data-ajax-replace="#ajax-cpp-info"></div>
 	 </div>
   </details>
 
@@ -1135,14 +1137,14 @@ Indian Act</h3>
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>  
+<li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>   
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small class="text-muted">(appropriate code)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124)</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed fishers</strong>)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 82 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong>)</small></li>
@@ -1151,6 +1153,7 @@ Indian Act</h3>
 <li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
 </ul></li>
 </ul>
+ <div data-ajax-replace="#ajax-cpp-info"></div>
 	   </div>
   </details>
  <div data-ajax-replace="#ajax-how-t4-t4a"></div>
