--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -666,8 +666,8 @@ Indian Act</h3>
 <p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
 <ul>
 <li><a href="#subtab1">Employment income</a> (including employment-related income)</li>
-<li><a href="#subtab2">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
-<li><a href="#subtab3">Self-employment income</a></li>
+<li><a href="#subtab2">Self-employment income</a></li>
+<li><a href="#subtab3">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
 </ul>
 
 <details><summary><span class="fas fa-comments"></span> What if you do not know if a worker is an employee or is self-employed </summary>
@@ -1036,69 +1036,8 @@ Indian Act</h3>
 
 </ol>
  </details>
+ 
  <details id="subtab2">
-        <summary>Non-employment income</summary>
-<h2 class="h3">Steps</h2>
-  <ol class="lst-stps stps-strpd">
-
-  <li>   Add steps here</li>
-<li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
-<h4>Payment made to a recipient</h4>
-<div id="ajax-t4a-report">
- <details><summary>Income all exempt</summary> 
-<div id="ajax-t4a-how-ex">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a person or partnership that was a shareholder: </p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI </li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP </li>  
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(tax-exempt pension or superannuation)</small> </li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(tax-exempt lump-sum payments)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
-</ul></li>
-</ul>
-<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
- </div>
-  </details>
- <details><summary>Income partly-exempt</summary> 
-<div id="ajax-t4a-how-part">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a person or partnership that was a shareholder: </p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI </li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP </li>  
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small class="text-muted">(<strong>only</strong> on the taxable pension or superannuation)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small class="text-muted">(<strong>only</strong> on the taxable lump-sum payments)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(<strong>only</strong> on the tax-exempt pension or superannuation)</small> </li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(<strong>only</strong> on the tax-exempt lump-sum payments)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
-</ul>
-</li>
-</ul>
-<div id="ajax-t4a-explain">
-<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
- </div>
- </div>
-  </details>
-</div>
- <div data-ajax-replace="#ajax-how-t4-t4a"></div>
-</li>
-
-</ol>
- </details>
- <details id="subtab3">
         <summary>Self-employment income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
@@ -1161,7 +1100,70 @@ Indian Act</h3>
 
 </ol>
  </details>
+<details id="subtab3">
+        <summary>Non-employment income</summary>
+<h2 class="h3">Steps</h2>
+  <ol class="lst-stps stps-strpd">
 
+  <li>   Add steps here</li>
+<li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
+<h4>Payment made to a First Nations recipient</h4>
+<div id="ajax-t4a-report">
+ <details><summary>Income all exempt</summary> 
+<div id="ajax-t4a-how-ex">
+<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a a First Nations recipient: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI </li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP </li>  
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(tax-exempt pension or superannuation)</small> </li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(tax-exempt lump-sum payments)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
+</ul></li>
+</ul>
+<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
+ </div>
+  </details>
+ <details><summary>Income partly-exempt</summary> 
+<div id="ajax-t4a-how-part">
+<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a person or partnership that was a shareholder: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI </li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP </li>  
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small class="text-muted">(<strong>only</strong> on the taxable pension or superannuation)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small class="text-muted">(<strong>only</strong> on the taxable lump-sum payments)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> Box 028 <small class="text-muted">(<strong>only</strong> on the taxable fees for services)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> Box 048 <small class="text-muted">(<strong>only</strong> on the taxable other income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(<strong>only</strong> on the tax-exempt pension or superannuation)</small> </li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(<strong>only</strong> on the tax-exempt lump-sum payments)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
+</ul>
+</li>
+</ul>
+<div id="ajax-t4a-explain">
+<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
+ </div>
+ </div>
+  </details>
+</div>
+ <div data-ajax-replace="#ajax-how-t4-t4a"></div>
+</li>
+
+</ol>
+ </details>
  </div>
  </div>
 	
