--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1044,12 +1044,12 @@ Indian Act</h3>
 
   <li>Add steps here </li>
 <li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
-
-<h4>Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
+<div id="ajax-t4-how-self-intro">
+<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+ </div>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
 
-	<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1071,7 +1071,6 @@ Indian Act</h3>
 
  <details><summary>Income partly-exempt</summary> 
    <div id="ajax-t4-how-self-part">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1107,11 +1106,12 @@ Indian Act</h3>
 
   <li>   Add steps here</li>
 <li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
-<h4>Payment made to a First Nations recipient</h4>
+<div id="ajax-t4-how-non-emp-intro">
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a a First Nations recipient:</p>
+</div>
 <div id="ajax-t4a-report">
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4a-how-ex">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a a First Nations recipient: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1132,7 +1132,6 @@ Indian Act</h3>
   </details>
  <details><summary>Income partly-exempt</summary> 
 <div id="ajax-t4a-how-part">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a person or partnership that was a shareholder: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
