--- a/newcomers/newcomers.html
+++ b/newcomers/newcomers.html
@@ -245,7 +245,7 @@ GST/HST credit – Eligibility</h1>
 	<li><span class="fas fa-check text-success fa-li"></span>A Canadian resident for income tax purposes during:   </li>
 	
 	</ul>
-		<div class="cnjnctn-type-or cnjnctn-xs">
+		<div class="cnjnctn-type-and cnjnctn-xs">
 		<div class="cnjnctn-col">
 			
 			<p>The month <strong>before</strong> the CRA makes a payment</p>
