--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1141,14 +1141,17 @@ Indian Act</h3>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small class="text-muted">(<strong>only</strong> on the taxable pension or superannuation)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small class="text-muted">(<strong>only</strong> on the taxable lump-sum payments)</small></li>
+<h5>Non-employment income</h5>
 <li><span class="fas fa-check fa-li text-success"></span> Box 028 <small class="text-muted">(<strong>only</strong> on the taxable fees for services)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> Box 048 <small class="text-muted">(<strong>only</strong> on the taxable other income)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
+<h5>Pension or superannuation</h5>
+ <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small class="text-muted">(<strong>only</strong> on the taxable pension or superannuation)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(<strong>only</strong> on the tax-exempt pension or superannuation)</small> </li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(<strong>only</strong> on the tax-exempt lump-sum payments)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
+<h5>Lump-sum payments</h5>
+ <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small class="text-muted">(<strong>only</strong> on the taxable lump-sum payments)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(<strong>only</strong> on the tax-exempt lump-sum payments)</small></li>
 </ul>
 </li>
 </ul>
