--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1045,7 +1045,7 @@ Indian Act</h3>
   <li>Add steps here </li>
 <li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
 <div id="ajax-t4-how-self-intro">
-<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a First Nations worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
  </div>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
