--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -665,9 +665,9 @@ Indian Act</h3>
 
 <p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
 <ul>
-<li><a href="#subtab1">Employment income</a> (including employment-related income)</li>
-<li><a href="#subtab2">Self-employment income</a></li>
-<li><a href="#subtab3">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
+<li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> (including employment-related income)</li>
+<li><a href="#subtab2" class="wb-tabs-ext">Self-employment income</a></li>
+<li><a href="#subtab3" class="wb-tabs-ext">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
 </ul>
 
 <details><summary><span class="fas fa-comments"></span> What if you do not know if a worker is an employee or is self-employed </summary>
