--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -276,20 +276,22 @@
 <p>If your business income is situated on a reserve, it is exempt from tax under section 87 of the Indian Act. The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
 <p>Your business income is generally exempt from tax when the actual income-earning activities of the business take place on a reserve. If your business activities are mostly carried on off a reserve, your business income would generally be considered taxable because the exemption under section 87 does not apply.</p>
 <p>When applying the connecting factors test to business income, the courts have indicated that the most significant connecting factors are:</p>
+<div id="ajax-self-connect">
 <ul>
-<li>where the income earning activities of the business take place</li>
-<li>the type of business and the nature of the business activities</li>
-<li>where the management and decision making activities of the business take place</li>
-<li>where the customers are located</li>
+<li>Where the income earning activities of the business take place</li>
+<li>The type of business and the nature of the business activities</li>
+<li>Where the management and decision making activities of the business take place</li>
+<li>Where the customers are located</li>
 </ul>
 <p>Other connecting factors that the courts have found to be less significant are:</p>
 <ul>
-<li>whether or not you live on a reserve</li>
-<li>whether you maintain an office on a reserve or take business orders from a location on a reserve</li>
-<li>whether your books and records are kept on a reserve</li>
-<li>whether your administrative, clerical, or accounting activities take place on a reserve</li>
+<li>Whether or not you live on a reserve</li>
+<li>Whether you maintain an office on a reserve or take business orders from a location on a reserve</li>
+<li>Whether your books and records are kept on a reserve</li>
+<li>Whether your administrative, clerical, or accounting activities take place on a reserve</li>
 </ul>
 <p>The above listing of connecting factors is not an exhaustive listing since there are other potential connecting factors that could apply depending on the fact situation. In addition, a connecting factor will have different relevance and weight depending upon the specific facts of each case. As a result, there is no standard test that can be used to determine if business income is situated on a reserve.</p>
+</div>
 <p>The following examples may help you determine if your business income is situated on a reserve, and thus exempt from tax.</p>
 
 
